feat: send feature usage stats to VWO

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-        ruby-version: [2.6.0, 2.6.7, 2.7.0, 2.7.3, 3.0.0, head]
+        ruby-version: [2.6.0, 2.6.7, 2.7.0, 2.7.3, 3.0.0, 3.4.2]
 
     continue-on-error: true
     steps:
