--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
         run: bundle install
 
       - name: Run tests
-        run: ruby tests/e2e/run_all_tests.rb
+        run: ruby tests/run_all_tests.rb
 
       - name: Notification
         if: always()
